fix headers overflow

--- a/public/app.css
+++ b/public/app.css
@@ -266,11 +266,13 @@ a {
         min-width: 100px;
         text-align: right;
         padding: 3px 6px;
+        overflow-wrap: anywhere;
     }
 
     td {
         vertical-align: top;
         padding: 3px 6px;
+        overflow-wrap: anywhere;
     }
 
     .link {
